# Revaer

./: .clippy.toml  .deployment-info  .dockerignore  .editorconfig  .env.example  .gitignore  .secignore  404.html  AGENT.md  AGENTS.md  COMPLIAANCE_GAPS.md  COMPLIANCE_GAPS.md  Cargo.toml  DASHBOARD_UI_CHECKLIST.md  Dockerfile  ERD_INDEXERS.md  ERD_INDEXERS_CHECKLIST.md  PRD_REVAER_OVERVIEW.md  README.md  REMEDIATION_PLAN.md  REVAER_PHASE1_ENGINEERING_SPEC.md  REVAER_PHASE1_WEBUX_DASHBOARD_SPEC.md  REVAER_PHASE1_WEBUX_SPEC.md  TORRENT_GAPS.md  book.toml  codealike.json  deny.toml  index.html  justfile  llms.html  llms.txt  phase-one-remaining-spec.html  phase-one-roadmap.html  print.html  release-checklist.html  runbook.html  searcher-c2a407aa.js  searchindex-02379307.js  searchindex-03fed577.js  searchindex-0a679ffc.js  (+58 more)
crates/revaer-api/: Cargo.toml
crates/revaer-api-models/: Cargo.toml
crates/revaer-api-models/src/: lib.rs
crates/revaer-api/i18n/: en.json
crates/revaer-api/src/: bootstrap.rs  compat_qb.rs  config.rs  error.rs  i18n.rs  lib.rs  models.rs  openapi.rs  openapi_assets.rs  state.rs
crates/revaer-api/src/app/: indexers.rs  mod.rs  state.rs
crates/revaer-api/src/config/: mod.rs
crates/revaer-api/src/http/: auth.rs  compat_qb.rs  constants.rs  docs.rs  errors.rs  filesystem.rs  health.rs  logs.rs  mod.rs  router.rs  settings.rs  setup.rs  sse.rs  telemetry.rs
crates/revaer-app/: Cargo.toml
crates/revaer-app/src/: bootstrap.rs  engine_config.rs  error.rs  indexer_runtime.rs  indexers.rs  lib.rs  main.rs  orchestrator.rs
crates/revaer-app/src/bootstrap/: tests.rs
crates/revaer-app/src/orchestrator/: tests.rs
crates/revaer-app/tests/: bootstrap.rs
crates/revaer-cli/: Cargo.toml
crates/revaer-cli/src/: cli.rs  client.rs  lib.rs  main.rs  output.rs
crates/revaer-cli/src/commands/: config.rs  indexers.rs  mod.rs  setup.rs  tail.rs  torrents.rs
crates/revaer-config/: Cargo.toml
crates/revaer-config/migrations/: 0001_init.sql  0002_revision_guard.sql
crates/revaer-config/src/: defaults.rs  engine_profile.rs  error.rs  lib.rs  loader.rs  model.rs  service.rs  validate.rs
crates/revaer-config/src/loader/: tests.rs
crates/revaer-config/tests/: integration.rs
crates/revaer-data/: Cargo.toml
crates/revaer-data/migrations/: 0001_config_init.sql  0001_db_init.sql  0002_addons_and_plugins.sql  0002_factory_reset.sql  0003_config_procedures.sql  0003_schema_and_tables.sql  0003_settings_normalization.sql  0004_engine_profile_unified.sql  0004_stored_procs_and_functions.sql  0005_engine_profile_cleanup.sql  0005_no_jsonb.sql  0005_queue_auto_manage.sql  0006_choking_and_super_seeding.sql  0006_tracker_config_validation.sql  0006_tracker_tls_auth.sql  0007_rebaseline.sql  0007_stats_interval.sql  0007_tracker_normalization.sql  0008_default_auth_mode_none.sql  0008_nat_toggles.sql  0008_tracker_auth.sql  0009_dht_nodes.sql  0009_local_networks.sql  0009_storage_options.sql  0010_disk_cache_options.sql  0010_ip_filter_blocklist.sql  0010_local_networks_backfill.sql  0011_fix_fetch_api_keys.sql  0011_listen_interfaces_ipv6.sql  0012_indexer_core.sql  0012_privacy_transport.sql  0013_indexer_definitions.sql  0013_outgoing_ports_dscp.sql  0014_connection_limits.sql  0014_indexer_instances.sql  0015_indexer_secrets.sql  0016_search_profiles_torznab.sql  0017_import_jobs.sql  0018_rate_limit_cf_state.sql  0019_policy_sets.sql  (+103 more)
crates/revaer-data/src/: config.rs  error.rs  lib.rs  runtime.rs  tests.rs
crates/revaer-data/src/indexers/: app_users.rs  backup.rs  canonical.rs  category_mapping.rs  cf_state.rs  conflicts.rs  connectivity.rs  definitions.rs  deployment.rs  executor.rs  import_jobs.rs  instances.rs  jobs.rs  mod.rs  normalization.rs  notifications.rs  outbound_requests.rs  policies.rs  policy_match.rs  rate_limits.rs  routing.rs  rss.rs  schema_tests.rs  search_pages.rs  search_profiles.rs  search_requests.rs  search_results.rs  secrets.rs  tags.rs  torznab.rs
crates/revaer-data/tests/: config.rs  indexers_schema.rs  runtime.rs
crates/revaer-data/tests/unit/: config_src_tests.rs  runtime_src_tests.rs
crates/revaer-doc-indexer/: Cargo.toml
crates/revaer-doc-indexer/src/: error.rs  lib.rs  main.rs
crates/revaer-events/: Cargo.toml
crates/revaer-events/src/: error.rs  lib.rs  payloads.rs  routing.rs  topics.rs
crates/revaer-fsops/: Cargo.toml
crates/revaer-fsops/src/: error.rs  lib.rs  service.rs
crates/revaer-fsops/src/model/: mod.rs
crates/revaer-fsops/src/service/: mod.rs
crates/revaer-runtime/: Cargo.toml
crates/revaer-runtime/migrations/: 1001_runtime_init.sql
crates/revaer-runtime/src/: lib.rs  runtime.rs
crates/revaer-runtime/src/runtime/: tests.rs
crates/revaer-runtime/tests/: runtime.rs
crates/revaer-telemetry/: Cargo.toml
crates/revaer-telemetry/src/: context.rs  error.rs  init.rs  layers.rs  lib.rs  log_stream.rs  metrics.rs  openapi.rs
crates/revaer-test-support/: Cargo.toml
crates/revaer-test-support/src/: assert.rs  fixtures.rs  lib.rs  mocks.rs  postgres.rs
crates/revaer-test-support/tests/: integration.rs
crates/revaer-torrent-core/: Cargo.toml
crates/revaer-torrent-core/src/: error.rs  lib.rs
crates/revaer-torrent-core/src/model/: mod.rs
crates/revaer-torrent-core/src/service/: mod.rs
crates/revaer-torrent-libt/: Cargo.toml  build.rs
crates/revaer-torrent-libt/src/: adapter.rs  command.rs  convert.rs  error.rs  ffi.rs  lib.rs  session.rs  store.rs  types.rs  worker.rs
crates/revaer-torrent-libt/src/ffi/: bridge.rs  mod.rs  session.cpp
crates/revaer-torrent-libt/tests/: native_integration.rs
crates/revaer-ui/: Cargo.toml  README.md  Trunk.toml  index.html
crates/revaer-ui/i18n/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  jv.json  ko.json  mr.json  pa.json  pt.json  ru.json  ta.json  te.json  tr.json  zh.json
crates/revaer-ui/src/: app.rs  breakpoints.rs  lib.rs  logic.rs  main.rs  models.rs  services.rs  state.rs  theme.rs  torrents_model.rs
crates/revaer-ui/src/app/: api.rs  mod.rs  (+4 more)
crates/revaer-ui/static/: style.css
(+1199 files in other folders)
