[workspace]
members = [
    "crates/revaer-app",
    "crates/revaer-api",
    "crates/revaer-cli",
    "crates/revaer-config",
    "crates/revaer-fsops",
    "crates/revaer-telemetry",
    "crates/revaer-torrent-core",
    "crates/revaer-torrent-libt",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Revaer Contributors"]
repository = "https://github.com/VannaDii/revaer"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["json", "macros", "tokio", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "json", "chrono"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
argon2 = "0.5"
rand = "0.9"
rand_core = "0.9"
