[workspace]
members = [
    "crates/revaer-app",
    "crates/revaer-api",
    "crates/revaer-cli",
    "crates/revaer-config",
    "crates/revaer-fsops",
    "crates/revaer-events",
    "crates/revaer-doc-indexer",
    "crates/revaer-telemetry",
    "crates/revaer-torrent-core",
    "crates/revaer-torrent-libt",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Revaer Contributors"]
repository = "https://github.com/VannaDii/revaer"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["json", "macros", "tokio", "http1", "matched-path", "query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "json", "chrono"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
argon2 = "0.5"
rand = "0.9"
rand_core = "0.9"
prometheus = "0.14"
once_cell = "1.21"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
base64 = "0.22"
regex = "1.11"
walkdir = "2.5"
jsonschema = "0.17"
