[package]
name = "revaer-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-config = { path = "../revaer-config" }
revaer-telemetry = { path = "../revaer-telemetry" }
