[package]
name = "revaer-api"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-config = { path = "../revaer-config" }
revaer-telemetry = { path = "../revaer-telemetry" }
revaer-torrent-core = { path = "../revaer-torrent-core" }
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
revaer-events = { path = "../revaer-events" }
uuid.workspace = true
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
base64.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true

[features]
default = ["compat-qb"]
compat-qb = []

[dev-dependencies]
