[package]
name = "revaer-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-api = { path = "../revaer-api" }
revaer-config = { path = "../revaer-config" }
revaer-fsops = { path = "../revaer-fsops" }
revaer-telemetry = { path = "../revaer-telemetry" }
revaer-torrent-core = { path = "../revaer-torrent-core" }
revaer-torrent-libt = { path = "../revaer-torrent-libt", optional = true }
revaer-events = { path = "../revaer-events" }
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["libtorrent"]
libtorrent = ["revaer-torrent-libt"]
