[package]
name = "revaer-app"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-api = { path = "../revaer-api" }
revaer-config = { path = "../revaer-config" }
revaer-fsops = { path = "../revaer-fsops" }
revaer-telemetry = { path = "../revaer-telemetry" }
revaer-torrent-core = { path = "../revaer-torrent-core" }
revaer-torrent-libt = { path = "../revaer-torrent-libt", default-features = false }
revaer-events = { path = "../revaer-events" }
revaer-runtime = { path = "../revaer-runtime" }
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.10"

[features]
default = ["libtorrent"]
libtorrent = ["revaer-torrent-libt/libtorrent"]
