[package]
name = "revaer-cli"
version = "0.1.0"
edition = "2024"
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-config = { path = "../revaer-config" }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
rpassword = "7.4"
rand.workspace = true
url = "2.5"
uuid.workspace = true

[dev-dependencies]
httpmock = "0.8"
chrono.workspace = true
