[package]
name = "revaer-config"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
chrono.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true

[dev-dependencies]
once_cell = "1.21"
serde_json.workspace = true
testcontainers = "0.25"
tokio.workspace = true
serial_test = { version = "3.2", features = ["async"] }
