[package]
name = "revaer-config"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
chrono.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true
revaer-data = { path = "../revaer-data" }

[dev-dependencies]
revaer-test-support = { path = "../revaer-test-support" }
