[package]
name = "revaer-config"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
argon2.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx.workspace = true
rand.workspace = true
rand_core.workspace = true
revaer-data = { path = "../revaer-data" }

[dev-dependencies]
anyhow.workspace = true
revaer-test-support = { path = "../revaer-test-support" }
