[package]
name = "revaer-doc-indexer"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Revaer mdBook companion that builds machine-readable documentation manifests."
license = "MIT OR Apache-2.0"
repository = "https://github.com/VannaDii/revaer"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
