[package]
name = "revaer-events"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
