[package]
name = "revaer-events"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-stream.workspace = true
