[package]
name = "revaer-fsops"
version = "0.1.0"
edition = "2024"
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
revaer-config = { path = "../revaer-config" }
revaer-events = { path = "../revaer-events" }
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
