[package]
name = "revaer-fsops"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
revaer-config = { path = "../revaer-config" }
revaer-events = { path = "../revaer-events" }
revaer-telemetry = { path = "../revaer-telemetry" }
tokio.workspace = true
globset = "0.4"
walkdir.workspace = true
nix = { version = "0.29", default-features = false, features = ["user", "fs"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
