[package]
name = "revaer-runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Runtime persistence for torrents and filesystem job tracking."
readme = "../../README.md"
keywords = ["revaer", "runtime", "persistence"]
categories = ["database"]

[dependencies]
revaer-data = { path = "../revaer-data" }
