[package]
name = "revaer-telemetry"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
tower-http.workspace = true
tokio.workspace = true
