[package]
name = "revaer-telemetry"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
tower-http.workspace = true
tokio.workspace = true
opentelemetry = { version = "0.23", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.23", default-features = false, features = ["trace", "rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3.10"
