[package]
name = "revaer-test-support"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
postgres = { version = "0.19", default-features = true }
url = "2.5"
