[package]
name = "revaer-torrent-core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
revaer-events = { path = "../revaer-events" }
