[package]
name = "revaer-torrent-core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
revaer-events = { path = "../revaer-events" }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
