[package]
name = "revaer-torrent-libt"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
revaer-torrent-core = { path = "../revaer-torrent-core" }
revaer-events = { path = "../revaer-events" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3.10"
