[package]
name = "revaer-torrent-libt"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["cxx"]

[features]
default = ["libtorrent"]
libtorrent = []

[dependencies]
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
revaer-torrent-core = { path = "../revaer-torrent-core" }
revaer-events = { path = "../revaer-events" }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
cxx = "1.0"

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tempfile = "3.10"
revaer-test-support.workspace = true

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"
