[package]
name = "revaer-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Revaer Contributors"]
publish = false

[package.metadata.cargo-llvm-cov]
ignore = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = "1.21"
uuid = { workspace = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
gloo = { version = "0.11", features = ["timers", "storage", "console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
anyhow = { workspace = true }
urlencoding = "2.1"
web-sys = { version = "0.3", features = [
    "Document",
    "DragEvent",
    "Element",
    "File",
    "HtmlElement",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "Window",
] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
