[package]
name = "revaer-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Revaer Contributors"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
urlencoding = "2.1"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo = { version = "0.8", features = ["timers", "storage", "console", "dialogs", "events", "file", "render"] }
gloo-net = { version = "0.2", features = ["http"] }
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"

[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = { workspace = true }
web-sys = { version = "0.3", features = [
    "Document",
    "DragEvent",
    "DataTransfer",
    "EventSource",
    "EventSourceInit",
    "Element",
    "File",
    "FileList",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlSelectElement",
    "InputEvent",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "Window",
] }
