[package]
name = "revaer-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Revaer Contributors"]
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["gloo", "gloo-net", "gloo-timers", "js-sys", "yew", "yew-router"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }
urlencoding = "2.1"
base64.workspace = true
chrono.workspace = true
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yewdux = "0.9.0"
revaer-api-models = { path = "../revaer-api-models" }
revaer-events = { path = "../revaer-events" }
gloo = { version = "0.8", features = ["timers", "storage", "console", "dialogs", "events", "file", "render"] }
gloo-net = { version = "0.2", features = ["http"] }
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"

[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = { workspace = true }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "Clipboard",
    "Headers",
    "Document",
    "DragEvent",
    "DataTransfer",
    "Element",
    "File",
    "FileList",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlDialogElement",
    "HtmlSelectElement",
    "InputEvent",
    "MediaQueryList",
    "Navigator",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "TextDecoder",
    "TextDecoderOptions",
    "Window",
] }

[dev-dependencies]
